@@ -22,13 +22,15 @@ public class RequestController {
     private final HouseService houseService;
     private final ModelMapper modelMapper;
     private final RoleService roleService;
+    private final QrService qrService;
 
-    public RequestController(RequestService requestService, UserService userService, HouseService houseService, ModelMapper modelMapper, RoleService roleService) {
+    public RequestController(RequestService requestService, UserService userService, HouseService houseService, ModelMapper modelMapper, RoleService roleService, QrService qrService) {
         this.requestService = requestService;
         this.userService = userService;
         this.houseService = houseService;
         this.modelMapper = modelMapper;
         this.roleService = roleService;
+        this.qrService = qrService;
     }
 
     @PostMapping("/new/casual")
@@ -47,7 +49,6 @@ public class RequestController {
                 return GeneralResponse.getResponse(HttpStatus.FOUND, "Request already exists!");
             }
 
-            //validar que el usuario sea residente de la casa
             if(!house.getUsers().contains(resident) && !house.getResidentAdmin().equals(resident)){
                 return GeneralResponse.getResponse(HttpStatus.FORBIDDEN, "User is not resident of the house!");
             }
@@ -68,7 +69,9 @@ public class RequestController {
     @GetMapping("/all")
     public ResponseEntity<GeneralResponse> getAllRequests() {
         try {
-            return GeneralResponse.getResponse(HttpStatus.OK, requestService.getAllRequests());
+            List<Request> requests = requestService.getAllRequests();
+            requests.removeIf(r -> r.getPhase().equals("APPROVED") || r.getPhase().equals("PENDING"));
+            return GeneralResponse.getResponse(HttpStatus.OK, requests);
         } catch (Exception e) {
             return GeneralResponse.getResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error!");
         }
@@ -88,6 +91,7 @@ public class RequestController {
             if(!req.getHouse().getResidentAdmin().equals(user)) {
                 return GeneralResponse.getResponse(HttpStatus.FORBIDDEN, "User is not admin of the house!");
             }
+
             if(req.getDisableTime().toInstant().isBefore(currentDate)){
                 return GeneralResponse.getResponse(HttpStatus.FORBIDDEN, "Request is not valid!");
             }
@@ -97,7 +101,7 @@ public class RequestController {
             requestService.updateRequest(req);
             return GeneralResponse.getResponse(HttpStatus.OK, "Request approved!");
         } catch (Exception e) {
-            return GeneralResponse.getResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error!");
+            return GeneralResponse.getResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error!"+e.getMessage());
         }
     }
 
@@ -210,9 +214,14 @@ public class RequestController {
             if(user == null || user.getRoles().stream().noneMatch(role -> role.getId().equals("ADMN"))){
                 return GeneralResponse.getResponse(HttpStatus.NOT_FOUND, "User not found!");
             }
-            List<Request> requests = requestService.getAllRequests();
-            requests.removeIf(r -> r.getQr() == null || !r.getQr().getState().equals("USED") || !r.getPhase().equals("EXPIRED"));
-            List<RecordDTO> reqs = requests.stream().map(request -> modelMapper.map(request, RecordDTO.class)).collect(Collectors.toList());
+            List<QR> qrs = qrService.getQrByState("USED");
+            List<RecordDTO> reqs = qrs.stream().map(qr -> {
+                RecordDTO record = new RecordDTO();
+                record.setId(qr.getId());
+                record.setVisitor(qr.getRequest().getVisitor());
+                record.setUsedAt(qr.getUsedAt());
+                return record;
+            }).toList();
             return GeneralResponse.getResponse(HttpStatus.OK, reqs);
         } catch (Exception e) {
             return GeneralResponse.getResponse(HttpStatus.INTERNAL_SERVER_ERROR, "Internal server error!");
@@ -266,8 +275,8 @@ public class RequestController {
                 return GeneralResponse.getResponse(HttpStatus.NOT_FOUND, "User not found!");
             }
             LocalDate today = LocalDate.now();
-            LocalDate lastMonday = today.with(TemporalAdjusters.previousOrSame(DayOfWeek.MONDAY));
-            Map<String, Long> requests = requestService.findAllByDay(lastMonday);
+            LocalDate lastMonday = today.with(TemporalAdjusters.previousOrSame(DayOfWeek.FRIDAY));
+            Map<String, Long> qrs = qrService.findAllByDay(lastMonday);
 
             List<String> daysOfWeek = Arrays.asList("MONDAY", "TUESDAY", "WEDNESDAY", "THURSDAY", "FRIDAY", "SATURDAY", "SUNDAY");
 
@@ -275,7 +284,7 @@ public class RequestController {
                     .map(day -> {
                         Map<String, Object> entry = new HashMap<>();
                         entry.put("name", day);
-                        entry.put("entries", requests.getOrDefault(day, 0L));
+                        entry.put("entries", qrs.getOrDefault(day, 0L));
                         return entry;
                     })
                     .collect(Collectors.toList());
@@ -295,14 +304,14 @@ public class RequestController {
             }
             LocalDate today = LocalDate.now();
             LocalDate startOfMonth = today.withDayOfMonth(1);  // Primer día del mes actual
-            Map<String, Long> requests = requestService.findAllByMonth(startOfMonth);
+            Map<String, Long> qrs = qrService.findAllByMonth(startOfMonth);
             List<String> monthsOfYear = Arrays.asList("JANUARY", "FEBRUARY", "MARCH", "APRIL", "MAY", "JUNE", "JULY", "AUGUST", "SEPTEMBER", "OCTOBER", "NOVEMBER", "DECEMBER");
 
             List<Map<String, Object>> entriesByMonth = monthsOfYear.stream()
                     .map(month -> {
                         Map<String, Object> entry = new HashMap<>();
                         entry.put("name", month);
-                        entry.put("entries", requests.getOrDefault(month, 0L));
+                        entry.put("entries", qrs.getOrDefault(month, 0L));
                         return entry;
                     })
                     .collect(Collectors.toList());
